latexsupport: fix cell vertical align in html

--- a/applications/latexsupport/starlink_basic.css
+++ b/applications/latexsupport/starlink_basic.css
@@ -376,4 +376,9 @@ td.td {
     padding-left:5px;
     padding-right:5px;
 }
+
+/* default latex vertical align is center, not baseline?*/
+td {
+   vertical-align: middle;
+}
 \EndCss
